--- a/extension.ini
+++ b/extension.ini
@@ -1,6 +1,6 @@
 # Datenstrom Yellow extension settings
 
-Extension: Theme
+Extension: Yourtheme
 Version: 0.9.1
 Description: Example theme for Datenstrom Yellow.
 Designer: You
@@ -9,6 +9,6 @@ DownloadUrl: https://github.com/datenstrom/yellow-example-theme/archive/refs/hea
 DocumentationUrl: https://github.com/datenstrom/yellow-example-theme
 Published: 2025-02-19 10:35:30
 Status: experimental
-system/workers/theme.php: theme.php, create, update
-system/themes/theme.css: theme.css, create, update, careful
-system/themes/theme.png: theme.png, create
+system/workers/yourtheme.php: yourtheme.php, create, update
+system/themes/yourtheme.css: yourtheme.css, create, update, careful
+system/themes/yourtheme.png: yourtheme.png, create
