--- a/extension.ini
+++ b/extension.ini
@@ -1,14 +1,14 @@
 # Datenstrom Yellow extension settings
 
-Extension: Yourtheme
+Extension: Newtheme
 Version: 0.9.1
 Description: Example theme for Datenstrom Yellow.
-Designer: You
+Designer: Your name
 Tag: example, theme
-DownloadUrl: https://github.com/datenstrom/yellow-example-theme/archive/refs/heads/main.zip
-DocumentationUrl: https://github.com/datenstrom/yellow-example-theme
+DownloadUrl: https://github.com/datenstrom/yellow-newtheme/archive/refs/heads/main.zip
+DocumentationUrl: https://github.com/datenstrom/yellow-newtheme
 Published: 2025-02-19 10:35:30
 Status: experimental
-system/workers/yourtheme.php: yourtheme.php, create, update
-system/themes/yourtheme.css: yourtheme.css, create, update, careful
-system/themes/yourtheme.png: yourtheme.png, create
+system/workers/newtheme.php: newtheme.php, create, update
+system/themes/newtheme.css: newtheme.css, create, update, careful
+system/themes/newtheme.png: newtheme.png, create
