--- a/extension.ini
+++ b/extension.ini
@@ -7,8 +7,11 @@ Designer: Your name
 Tag: example, theme
 DownloadUrl: https://github.com/datenstrom/yellow-newtheme/archive/refs/heads/main.zip
 DocumentationUrl: https://github.com/datenstrom/yellow-newtheme
-Published: 2025-02-19 10:35:30
+Published: 2025-03-09 18:36:00
 Status: experimental
 system/workers/newtheme.php: newtheme.php, create, update
 system/themes/newtheme.css: newtheme.css, create, update, careful
 system/themes/newtheme.png: newtheme.png, create
+system/themes/newtheme-firasans-bold.woff: newtheme-firasans-bold.woff, create, update, careful
+system/themes/newtheme-firasans-light.woff: newtheme-firasans-light.woff, create, update, careful
+system/themes/newtheme-firasans-regular.woff: newtheme-firasans-regular.woff, create, update, careful
