--- a/extension.ini
+++ b/extension.ini
@@ -2,7 +2,7 @@
 
 Extension: Newtheme
 Version: 0.9.1
-Description: Example theme for Datenstrom Yellow.
+Description: Small example theme for Datenstrom Yellow.
 Designer: Your name
 Tag: example, theme
 DownloadUrl: https://github.com/datenstrom/yellow-newtheme/archive/refs/heads/main.zip
